# doe-egot-system

./: '  .gitignore  100.txt  CMakeLists.txt  Doxyfile  LICENSE  Pipfile  README.md  connection_test.sh  group.xml  setup.sh
apps/: CMakeLists.txt
apps/dcm/: CMakeLists.txt
apps/dcm-aosmith/: CMakeLists.txt
apps/dcm-aosmith/src/: main.cpp  test.cpp
apps/dcm/src/: CMakeLists.txt  main.cpp
apps/dcm/tests/: ecs_tests.cpp  https_tests.cpp
apps/dtm/: CMakeLists.txt  README.md  dtmc.py
apps/dtm/src/: CMakeLists.txt  main.cpp
apps/dtm/src/dtm/: CMakeLists.txt  dtm_server.cpp
apps/dtm/src/dtm_msg_writer/: CMakeLists.txt
apps/dtm/tests/: CMakeLists.txt  demo.cpp
apps/gsp/: CMakeLists.txt
apps/gsp/src/: CMakeLists.txt  main.cpp
apps/gsp/tests/: CMakeLists.txt  edev_tests.cpp  rsp_list_tests.cpp  rsps_tests.cpp
apps/gsp/tests/src/: dcap_tests.cpp  edev_list_tests.cpp  edev_tests.cpp  frp_list_tests.cpp  frp_tests.cpp  frq_list_tests.cpp  frq_tests.cpp  main.cpp  ps_list_tests.cpp  ps_tests.cpp  rg_tests.cpp  rsp_list_tests.cpp  rsp_tests.cpp  rsps_list_tests.cpp  sdev_tests.cpp  tm_tests.cpp
apps/me/: me.py
apps/me/data/: emergency.xml  energy.xml  groups.xml  services.xml  time.xml
apps/simple/: CMakeLists.txt
apps/simple/src/: main.cpp  solar.cpp
dcm/: CMakeLists.txt  README.md
dcm/src/: CMakeLists.txt  main.cpp
dcm/src/command_pattern/: CMakeLists.txt  dcm_commands.cpp  ecs_dcm.cpp  s_sim_invoker.cpp  simple_sim_receiver.cpp
dcm/src/communication/: CMakeLists.txt  dtm_client.cpp  gsp_client.cpp  trust_cta2045_client.cpp  trust_der_client.cpp  trust_gsp_client.cpp
dcm/src/communication/include/: dtm_client.hpp  gsp_client.hpp  trust_cta2045_client.hpp  trust_der_client.hpp  trust_gsp_client.hpp
dcm/src/dtm_msg_writer/: abstract_command.cpp  announce_xml.cpp
dcm/src/ecs/: CMakeLists.txt  cta2045_module.cpp  der.cpp  sep_common_module.cpp  sep_smart_energy_module.cpp  sep_support_module.cpp  simulation_module.cpp  waterheater.cpp
dcm/src/ecs/include/: cta2045_module.hpp  der.hpp  sep_common_module.hpp  sep_smart_energy_module.hpp  sep_support_module.hpp  simulation_module.hpp  waterheater.hpp
dcm/src/ecs/sep/: CMakeLists.txt  dcap.cpp  fsa.cpp
dcm/src/https/: CMakeLists.txt  https_client.cpp
dcm/tests/: CMakeLists.txt
docs/: Doxyfile
dtm/: CMakeLists.txt  LICENSE  README.md  config.ini
dtm/logs/: demo.txt
dtm/resources/: TrustLog_loopback.xml  TrustLog_loopback2.xml  Trustlog_testing1.xml  temp.txt
dtm/scripts/: DTMServer_loopback1.py  Log_Restart_v2.py  Trustlog_testing1.xml  client_test.py  dtm_server.py  httpClient_loopback1.py  httpClient_loopback2_2045xml.py  simple_server.py  v2_dtm_server_indie.py
dtm/src/: CMakeLists.txt  main.cpp
dtm/src/dtm/: CMakeLists.txt  dtm_server.cpp
dtm/tests/: CMakeLists.txt  demo.cpp  dtm_testing.cpp  main.cpp
dtm/trust_cta2045/: CMakeLists.txt  trust_device.cpp  trust_ucm.cpp
dtm/trust_cta2045/include/trust_cta2045/: trust_device.hpp  trust_ucm.hpp
dtm/trust_https/: CMakeLists.txt  singleton_trust_https.cpp  trust_https.cpp
dtm/trust_xml/: CMakeLists.txt  trust_xml.cpp
ecs/: CMakeLists.txt  access_module.cpp  cta2045_module.cpp  meter.cpp  sep_common_module.cpp  sep_smart_energy_module.cpp  sep_support_module.cpp  water_heater_sim.cpp  world.cpp
ecs/include/world/: access_module.hpp  cta2045_module.hpp  href.hpp  meter.hpp  query.hpp  sep_common_module.hpp  sep_support_module.hpp  uri.hpp  water_heater_sim.hpp  world.hpp
ecs/scope/: CMakeLists.txt  main.cpp
gsp/: CMakeLists.txt  GSPConfig.cmake.in  README.md
gsp/resources/: dcap.xml  edev.xml  fres.xml  tm.xml
gsp/src/: CMakeLists.txt  main.cpp
gsp/src/communication/: CMakeLists.txt  https_server.cpp
gsp/src/ecs/: CMakeLists.txt  access_module.cpp  sep_common_module.cpp  sep_support_module.cpp  world.cpp
gsp/src/https/: CMakeLists.txt  https_server.cpp
gsp/tests/: CMakeLists.txt  main.cpp  use_case_1.cpp  wadl_check.hpp
interfaces/https/: CMakeLists.txt  README.md  https_client.cpp
interfaces/https/client/: CMakeLists.txt  client.cpp  combined_client.cpp  https_client.cpp  single_client.cpp
interfaces/https/scale/: CMakeLists.txt  client.cpp  server.cpp
interfaces/https/server/: CMakeLists.txt  https_server.cpp
interfaces/https/tests/: CMakeLists.txt  dcap_tests.cpp  dstat_tests.cpp  edev_list_tests.cpp  edev_tests.cpp  frp_list_tests.cpp  frp_tests.cpp  frq_list_tests.cpp  frq_tests.cpp  fsa_tests.cpp  main.cpp  ntfy_tests.cpp  rg_tests.cpp  rsp_list_tests.cpp  rsp_tests.cpp  rsps_list_tests.cpp  rsps_tests.cpp  sdev_tests.cpp  server.cpp  sub_tests.cpp  tm_tests.cpp
interfaces/modeling-environment/: CMakeLists.txt
libs/cta2045/: CMakeLists.txt  README.md
libs/cta2045/src/: cta2045_handler.cpp  cta2045_receiver.cpp  device.cpp  ucm.cpp
sep/: .gitignore  CMakeLists.txt  Dockerfile.buster  SEPConfig.cmake.in
sep/model/: CMakeLists.txt
sep/tests/: CMakeLists.txt
sep/tests/dcm/: CMakeLists.txt  dcm_test.cpp  handler.hpp  main.cpp  random.cpp  random.hpp
sep/tests/xml/: CMakeLists.txt  device_capability_test.cpp  end_device_test.cpp  flow_reservation_response_test.cpp  global.hpp  main.cpp  self_device_test.cpp  time_test.cpp
sep/xml/: CMakeLists.txt  xml_validator.cpp
standards/cta-2045/: CMakeLists.txt  README.md  cta2045.cpp  cta2045_receiver.cpp  cta2045handler.cpp  ecs_epri_ucm_impl.cpp  ucm_client.cpp
standards/ieee-2030.5/: CMakeLists.txt
standards/ieee-2030.5/wadl/: CMakeLists.txt  wadl.cpp
standards/ieee-2030.5/xml/: CMakeLists.txt  adapter.cpp  device_capability_adapter.cpp  end_device_adapter.cpp  flow_reservation_request_adapter.cpp  flow_reservation_response_adapter.cpp  mirror_usage_point_adapter.cpp  power_status_adapter.cpp  registration_adapter.cpp  response_adapter.cpp  response_set_adapter.cpp  self_device_adapter.cpp  time_adapter.cpp  utilities.cpp
standards/sunspec-modbus/: CMakeLists.txt  modbus_adapter.cpp
test-plans/dcm/: CMakeLists.txt  README.md
utilities/: CMakeLists.txt  README.md  utilities.cpp
utilities/include/utilities/: utilities.hpp
(+2983 files in other folders)
